# ChangeLog for net-dialup/ppp
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.277 2012/06/14 01:48:45 zmedico Exp $

  14 Jun 2012; Zac Medico <zmedico@gentoo.org> ppp-2.4.4-r25.ebuild,
  ppp-2.4.5-r1.ebuild, ppp-2.4.5-r2.ebuild:
  inherit multilib for get_libdir

  06 Apr 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #63588

  11 Nov 2011; Diego E. Pettenò <flameeyes@gentoo.org> ppp-2.4.5-r2.ebuild:
  QA: fetch the patchset from dev.gentoo.org rather than mirrors.

*ppp-2.4.5-r2 (11 Nov 2011)

  11 Nov 2011; Alin Năstac <mrness@gentoo.org> -ppp-2.4.5.ebuild,
  +ppp-2.4.5-r2.ebuild, metadata.xml:
  Fix QA issues in pppdump.c. Update EAP-TLS patch. Remove reference to
  undefined symbol in passwordfd plugin (#389565).

  17 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> ppp-2.4.5-r1.ebuild:
  ppc/ppc64 stable wrt #366719

  12 Jun 2011; Raúl Porcel <armin76@gentoo.org> ppp-2.4.5-r1.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #366719

  05 Jun 2011; Jeroen Roovers <jer@gentoo.org> ppp-2.4.5-r1.ebuild:
  Stable for HPPA (bug #366719).

  02 Jun 2011; Markus Meier <maekke@gentoo.org> ppp-2.4.5-r1.ebuild:
  arm stable, bug #366719

  31 May 2011; Markus Meier <maekke@gentoo.org> ppp-2.4.5-r1.ebuild:
  amd64/x86 stable, bug #366719

  02 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> ppp-2.4.4-r25.ebuild,
  ppp-2.4.5.ebuild, ppp-2.4.5-r1.ebuild:
  Use net-libs/libpcap instead of virtual/libpcap wrt #358835.

  29 Mar 2011; Christoph Mende <angelos@gentoo.org> ppp-2.4.4-r25.ebuild:
  Fixed slot deps

*ppp-2.4.5-r1 (27 Nov 2010)

  27 Nov 2010; Alin Năstac <mrness@gentoo.org> -ppp-2.4.4-r24.ebuild,
  +ppp-2.4.5-r1.ebuild:
  Fix PPPOE freeze when garbage packets are received iso PADO/PADS
  (#340267). Add lcp-echo-adaptive option (#344273).

  02 Nov 2010; Jeroen Roovers <jer@gentoo.org> ppp-2.4.4-r25.ebuild:
  Stable for PPC (bug #331611).