@@ -1,6 +1,10 @@
 # ChangeLog for net-dialup/ppp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.277 2012/06/14 01:48:45 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.278 2012/08/07 15:05:23 vapier Exp $
+
+  07 Aug 2012; Mike Frysinger <vapier@gentoo.org> ppp-2.4.5-r2.ebuild:
+  Remove local copies of linux-headers and rely on the system one being up-to-
+  date #427684 by SpanKY.
 
   14 Jun 2012; Zac Medico <zmedico@gentoo.org> ppp-2.4.4-r25.ebuild,
   ppp-2.4.5-r1.ebuild, ppp-2.4.5-r2.ebuild:
